Fixed spacing issues on hamburger menu for story pages

--- a/assets/scss/_single.scss
+++ b/assets/scss/_single.scss
@@ -24,7 +24,11 @@
 
 nav{
   grid-area: nav;
-  
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  background-color: rgba(0, 0, 0, 0.3);
+
   @media screen and (max-width:800px){
     width: 100vw;
     justify-content: space-around;
